# mvnotes

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  global.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_gemini_key.sql  003_ollama_model.sql  004_update_default_model.sql  005_mic_device.sql  006_deepgram_key.sql  007_groq_key.sql  008_pomodoro_settings.sql  009_study_notes.sql  010_schedule_start_hour.sql  011_schedule_end_hour.sql  012_study_notes_tags.sql  013_whiteboard_task_link.sql  014_task_recurrence.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: data.rs  mod.rs  notes.rs  settings.rs  study_notes.rs  system.rs  tasks.rs  whiteboards.rs
src/components/common/: ErrorBanner.tsx  Sidebar.tsx  Spinner.tsx
src/components/dashboard/: DashboardHeader.tsx  OverdueBanner.tsx  PomodoroTimer.tsx  QuickNotes.tsx  TaskGroup.tsx  TaskItem.tsx  (+3 more)
src/hooks/: useAudioRecorder.ts  useClock.ts  useGlobalShortcut.ts  useMicDevices.ts  usePomodoroInterval.ts  useSpeechRecognition.ts  useTaskReminders.ts
src/lib/: dateUtils.ts  deepgram.ts  groq.ts  notifications.ts  tauri.ts  voiceParser.ts
src/stores/: navStore.ts  noteStore.ts  pomodoroStore.ts  settingsStore.ts  studyNoteStore.ts  taskStore.ts  whiteboardStore.ts
src/types/: index.ts
src/views/: DashboardView.tsx  NotesView.tsx  QuickCaptureView.tsx  ScheduleView.tsx  SettingsView.tsx  WhiteboardView.tsx
(+4 files in other folders)
